<resources>
    <string name="app_name">Audition</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Login Fragment -->
    <string name="sign_up">Sign Up</string>
    <string name="terms">I Accept the terms and condition</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phNumber">Number</string>
    <string name="empty_field">Field Can\'t be Empty</string>
    <string name="login_text">Already Have An Account ?</string>

    <!-- verification fragment -->
    <string name="verification">Verification</string>
    <string name="info_verification">Please Enter the verification code sent to %1$s </string>
    <string name="verify">Verify</string>
    <string name="resend">RESEND OTP ?</string>
    <string name="welcome">Welcome</string>
    <string name="dob">DOB</string>
    <string name="header_category">Hi There ,\nTell Us About Yourself </string>
    <string name="topaudition">Top Audition</string>

    <!--    <string name="upload">upload</string>-->
    <string name="some_text"><![CDATA[<font color=\'#f57f17\'>upload</font> ]]></string>
    <string name="UPLOAD"><![CDATA[<font color=\'#000\'><b>UPLOAD</b></font> ]]></string>
    <string name="number">1</string>

    <string-array name="Category">
        <item>SELECT</item>
        <item>acting</item>
        <item>singing</item>
        <item>dancing</item>
        <item>anchoring</item>

    </string-array>


</resources>