<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_black"
    android:paddingHorizontal="30dp"
    tools:context=".LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/welcome"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/nameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/Base.Widget.AppCompat.EditText.AuditionEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/name"
        android:lines="1"
        android:inputType="text|textCapSentences"

        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/Base.Widget.AppCompat.EditText.AuditionEditText"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:lines="1"
        android:inputType="textEmailAddress"


        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameEditText"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/phoneEditText"
        style="@style/Base.Widget.AppCompat.EditText.AuditionEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:background="@color/blackish"
        android:hint="@string/phNumber"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:digits="1234567890"
        android:inputType="textFilter"
        android:lines="1"
        android:maxLength="10"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/countryCodeSpinner"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.15" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/materialCheckBox"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <TextView
        android:id="@+id/termsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/materialCheckBox"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton"
        app:layout_constraintVertical_bias="0.125" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.AuditionButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />


    <Spinner
        android:id="@+id/countryCodeSpinner"
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:background="@color/blackish"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:layout_constraintVertical_bias="0.394"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@color/blackish"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        app:layout_constraintVertical_bias="0.4"
        tools:listitem="@layout/support_simple_spinner_dropdown_item" />

    <EditText
        android:id="@+id/editTextDate"
        style="@style/Base.Widget.AppCompat.EditText.AuditionEditText"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@color/blackish"
        android:ems="10"
        android:hint="@string/dob"
        android:inputType="date"
        android:lines="1"
        android:paddingHorizontal="20dp"
        app:layout_constraintBottom_toTopOf="@+id/signUpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toEndOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/phoneEditText"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorOnPrimary"
        android:clickable="false"
        android:focusable="false"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/login_text"
        android:textColor="@color/colorOnPrimary"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsTextView"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>