<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerificationFragment"
    android:background="@color/bg_black"
    android:paddingHorizontal="30dp"
    >


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/verification"
        android:textColor="@color/white"
        android:textSize="26sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        android:id="@+id/headerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/info_verification"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.12" />

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:bar_enabled="true"
        app:bar_height="2dp"
        app:bar_active_color="@color/white"

        app:height="40dp"
        app:length="6"
        app:otp_text_size="24dp"
        app:width="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.602"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerView"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/resendOtp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/amiko_semibold"
        android:text="@string/resend"
        android:clickable="false"
        android:textColor="@color/colorOnPrimary"
        android:padding="10dp"
        android:textSize="11sp"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintBottom_toTopOf="@+id/verifyButton"
        app:layout_constraintEnd_toEndOf="@+id/otp_view"
        app:layout_constraintStart_toStartOf="@+id/otp_view"
        app:layout_constraintTop_toBottomOf="@+id/otp_view" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyButton"
        style="@style/Base.TextAppearance.AppCompat.Widget.Button.AuditionButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:text="@string/verify"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/otp_view"
        app:layout_constraintStart_toStartOf="@+id/otp_view"
        app:layout_constraintTop_toBottomOf="@+id/otp_view"
        app:layout_constraintVertical_bias="0.2" />


    <com.ldoublem.loadingviewlib.view.LVGhost
        android:id="@+id/lvGhostView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verifyButton" />


</androidx.constraintlayout.widget.ConstraintLayout>